force-app/main/default/objects/MRay_Work_Order_Template_Items__c/MRay_Work_Order_Template_Items__c.object-meta.xml
<CustomObject>
    <description>intersection object between work order template and work types</description>
    <label>Work Order Template Items</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>