force-app/main/default/objects/MRay_Work_Order_Template_Items__c/fields/Work_Order_Template__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Template__c</fullName>
    <label>Work Order Template</label>
    <referenceTo>MRay_Work_Order_Template__c</referenceTo>
    <relationshipLabel>Work Order Template Items</relationshipLabel>
    <relationshipName>Work_Order_Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>