force-app/main/default/objects/MRay_Work_Order_Template_Items__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Order Template Items</relationshipLabel>
    <relationshipName>Work_Order_Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>